@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/mit-krb5
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.268 2011/03/18 17:26:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.269 2011/03/19 16:15:03 eras Exp $
+
+  19 Mar 2011; Eray Aslan <eras@gentoo.org> -mit-krb5-1.9-r1.ebuild:
+  remove vulnerable version.
 
   18 Mar 2011; Raúl Porcel <armin76@gentoo.org> mit-krb5-1.8.3-r4.ebuild:
   alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #359129
